--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,10 @@ script:
 deploy:
     provider: elasticbeanstalk
     region: "ap-south-1"
-    app: "docker-react"
+    app: "docker-reactAws"
     env: "DockerReactaws-env"
     bucket_name: "elasticbeanstalk-ap-south-1-346857477584"
-    bucket_path: "docker-react"
+    bucket_path: "docker-reactAws"
     on:
         branch: master
     access_key_id: $AWS_ACCESS_KEY
